--- a/Packages/Unity.RhinoLoader/package.json
+++ b/Packages/Unity.RhinoLoader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stam.rhino.loader",
-  "displayName": "Unity Loader",
+  "displayName": "Rhino Loader",
   "version": "1.0.0",
   "unity": "2020.1",
   "keywords": [
